[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "tabulate>=0.9.0",
]

[project.scripts]
ya = "ya.__main__:main"
